Modified user apis paths
